--- a/group/blocks/header/header.css
+++ b/group/blocks/header/header.css
@@ -156,6 +156,10 @@ header nav .nav-brand picture img {
   height: auto;
 }
 
+header nav .nav-brand .icon {
+  width: 100%;
+}
+
 header nav .nav-brand .icon img {
   width: 128px;
   height: auto;
@@ -224,7 +228,7 @@ header nav[aria-expanded='true'] .nav-sections ul > li > ul > li {
 
 @media (width >= 900px) {
   header .nav-brand {
-    padding: 0 2.5rem;
+    padding: 0 0 0 2.5rem;
     margin: 0 auto;
   }
 
